# PROJET_7

./: .dockerignore  Dockerfile  PROJET_7.ipynb  README.md  client_index.pkl  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
api/: api.py
app/: app.py
models/: 0_model.joblib  KNN_model.joblib  credit_model.joblib  lgbm_model.joblib  lgbm_optimized_model.joblib  lgbm_reduced_model.joblib  median_model.joblib  scaler.joblib
tests/: conftest.py  test_api.py
