[project]
name = "projet-7"
version = "0.1.0"
description = ""
authors = [
    {name = "EP-portfolio",email = "m.eddyponton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.24,<2.2)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mlflow (>=2.20.2,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "httpx (==0.24.1)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "numba (>=0.57)",
    "shap (>=0.46.0,<0.47.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

